force-app/main/default/objects/BatalhaDoContato__c/BatalhaDoContato__c.object-meta.xml
<CustomObject>
    <description>Campo responsável por criar a ligação do contato com a batalha</description>
    <label>Batalha do Contato</label>
    <nameField>
        <displayFormat>BATCONTA{0000000}</displayFormat>
        <label>Batalha do Contato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batalhas do Contato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>