force-app/main/default/objects/BatalhaDoContato__c/fields/Batalha__c.field-meta.xml
<CustomField>
    <fullName>Batalha__c</fullName>
    <description>Batalha onde os contatos participaram</description>
    <inlineHelpText>Batalha onde os contatos participaram</inlineHelpText>
    <label>Batalha</label>
    <referenceTo>Batalha__c</referenceTo>
    <relationshipLabel>Batalhas</relationshipLabel>
    <relationshipName>Batalhas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>