force-app/main/default/objects/BatalhaDoContato__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contato que participou da batalha</description>
    <inlineHelpText>Contato que participou da batalha</inlineHelpText>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Batalhas do Contato</relationshipLabel>
    <relationshipName>Contato</relationshipName>
    <type>Lookup</type>
</CustomField>