force-app/main/default/objects/BatalhaDoContato__c/fields/PapelNaBatalha__c.field-meta.xml
<CustomField>
    <fullName>PapelNaBatalha__c</fullName>
    <description>Papel do herói na batalha</description>
    <formula>Contato__r.NomeDeGuerra__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Papel do herói na batalha</inlineHelpText>
    <label>Papel na Batalha</label>
    <type>Text</type>
</CustomField>